--- a/assets/src/scss/text-img-section.scss
+++ b/assets/src/scss/text-img-section.scss
@@ -5,9 +5,9 @@
             padding-bottom: 100px;
         }
         .logo-wrap{
-            justify-content: center;
-            display: flex;
-            flex-wrap: wrap;
+            // justify-content: center;
+            // display: flex;
+            // flex-wrap: wrap;
         }
         .logo{
             padding: 10px 10px;
